--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#3895ed",
-        "activityBar.background": "#3895ed",
+        "activityBar.activeBackground": "#fff3f5",
+        "activityBar.background": "#fff3f5",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#fac5e0",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#3895ed",
-        "statusBar.background": "#147cde",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#3895ed",
-        "statusBarItem.remoteBackground": "#147cde",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#147cde",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#147cde99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#20bf00",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#fff3f5",
+        "statusBar.background": "#ffc0cb",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#ff8da1",
+        "statusBarItem.remoteBackground": "#ffc0cb",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#ffc0cb",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#ffc0cb99",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#147cde"
+    "peacock.color": "PINK"
 }
